Change the color of a warning text on result page

--- a/views/default/confirmation.html
+++ b/views/default/confirmation.html
@@ -50,7 +50,7 @@
     <tbody>
         <tr>
             <td><strong>Token</strong></td>
-            <td>{{=meta_token}} <br> {{if session.status == 1:}}<strong><font color="red">Please take a note of this token, you may use it to retrieve the result in the next 7 days.</font></strong>{{pass}}</td>
+            <td>{{=meta_token}} <br> {{if session.status == 1:}}<strong><font color="#6c2b6a">Please take a note of this token, you may use it to retrieve the result in the next 7 days.</font></strong>{{pass}}</td>
         </tr>
         {{if meta_job_name != "":}}
         <tr>
