Reduce image height to 100px Fix a bug that rejects tar.gz files Remove popup message from job page

--- a/views/default/jobs.html
+++ b/views/default/jobs.html
@@ -4,5 +4,6 @@
 <br><br>
 {{=form}}
 <br>
-<strong>* To submit multiple jobs upload as a zip or tar.gz with one fasta file per sample</strong>
-
+<strong>Please confirm the information provided is correct. It may take up to 5 minutes to upload the file. Please do not close this page or start a new job.</strong>
+<p>&nbsp;</p>
+<strong>* To submit multiple jobs upload as a zip or tar.gz with one fasta file per sample.</strong>
