Fix a bug in downloading result FASTA

--- a/views/default/confirmation.html
+++ b/views/default/confirmation.html
@@ -314,7 +314,14 @@
                                             <tr>
                                                 <td><strong>Assembly pieces <a href="{{=URL('static','tooltips/tp8.html')}}?width=450" class="jTip" id="tp8_{{=i}}" name="Assembly pieces" style="color:rgb(62,63,57)"><i class="fa fa-info-circle" style="color"></i></a> :</strong></td>
                                                 <td width=50px></td>
-                                                <td><a href="{{=URL('download',args=(meta_token, str(i), 'kaptive_results_' + assemble_name + '.fasta'))}}" download="{{=('kaptive_results_' + assemble_name + '.fasta')}}">Download as FASTA</a></td>
+                                                {{
+                                                    for job in job_data["Job list"]:
+                                                        if job["Fasta file"] == assemble_name + '.fasta':
+                                                            job_seq = job["Job seq"]
+                                                        pass
+                                                    pass
+                                                }}
+                                                <td><a href="{{=URL('download',args=(meta_token, str(job_seq), 'kaptive_results_' + assemble_name + '.fasta'))}}" download="{{=('kaptive_results_' + assemble_name + '.fasta')}}">Download as FASTA</a></td>
                                             </tr>
                                         </table>
                                     </td>
