Edit text of landing page

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -35,7 +35,7 @@
                 <div class="title" id="about">
                     <h2>About Kaptive</h2>
                 </div>
-                <p style="font-size:25px"><strong>Kaptive</strong> is a tool for <i>Klebsiella</i> capsule locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each one finds the best matching capsule locus (K-locus) from a reference database.</p>
+                <p style="font-size:25px"><strong>Kaptive</strong> is a tool for <i>Klebsiella</i> locus typing and variant evaluation. It takes one or more pre-assembled genomes and for each finds the best matching locus from a reference database. References for known K-loci (capsule) and O-loci (lipopolysaccharide) are available in Kaptive's web interface.</p>
             </div>
         </div>
         <div id="wrapper3">
@@ -57,24 +57,24 @@
                     <div class="box">
                         <span class="fa fa-key fa-2x"><br><br></span>
                         <h3>Our team</h3>
-                        <p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Microbial Genomics Lab, Centre for Systems Genomics.</p>
+                        <p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Lab in the Bio21 Molecular Science & Biotechnology Institute.</p>
                         <a href="https://holtlab.net/" class="button button-small">Visit Holt Lab</a>
                     </div>
                 </div>
                 <div class="column3">
                     <div class="box">
                         <span class="fa fa-trophy fa-2x"><br><br></span>
-                        <h3>About Sysgen</h3>
-                        <p><strong>Centre for Systems Genomics</strong> is an interdisciplinary multi-faculty initiative of the University of Melbourne.<br><br></p>
-                        <a href="https://sysgenmelb.org/" class="button button-small">Visit SysGen</a>
+                        <h3>About Bio21</h3>
+                        <p>The Bio21 Molecular Science & Biotechnology Institute is a multidisciplinary research centre at the University of Melbourne.<br><br></p>
+                        <a href="http://www.bio21.unimelb.edu.au/" class="button button-small">Visit Bio21</a>
                     </div>
                 </div>
                 <div class="column4">
                     <div class="box">
                         <span class="fa fa-github fa-2x"><br><br></span>
                         <h3>Kaptive on GitHub</h3>
-                        <p>This is the webfront of <strong>Kaptive</strong> for <i>Klebsiella</i>. The command line version can be deployed on your computer with <i>Klebsiella</i> capsule or other databases.</p>
-                        <a href="https://github.com/katholt/Kaptive" class="button button-small">Vist GitHub</a>
+                        <p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> capsule or other databases.</p>
+                        <a href="https://github.com/katholt/Kaptive" class="button button-small">Visit GitHub</a>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
             </ul>
         </div>
         <div id="copyright" class="container">
-            <p>&copy; <strong>Kaptive</strong> . All rights reserved. | Design by <a href="http://eresearch.unimelb.edu.au" rel="nofollow">Melbourne eResearch Group</a>, The University of Melbourne.</p>
+            <p>&copy; <strong>Kaptive</strong> . All rights reserved. | Design by <a href="http://eresearch.unimelb.edu.au" rel="nofollow">Melbourne eResearch Group</a>, University of Melbourne.</p>
         </div>
     </div>
 </body>
