Edit job submission page text

--- a/views/layout.html
+++ b/views/layout.html
@@ -107,7 +107,7 @@
     {{block footer}} <!-- this is default footer -->      
     <footer class="footer">
       <div class="container-fluid">
-        <div class="copyright pull-left">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
+        <div class="copyright pull-left">{{=T('Copyright')}} {{=request.now.year}}</div>
           <!-- <div id="poweredBy" class="pull-right">
             {{=T('Powered by')}}
             <a href="http://www.web2py.com/">web2py</a>
