--- a/views/default/jobs.html
+++ b/views/default/jobs.html
@@ -4,5 +4,5 @@
 <br><br>
 {{=form}}
 <br>
-<strong>* To submit multiple jobs upload as a zip or tar.gz with one fasta file per sample</strong>
+<strong>* To submit multiple jobs, upload a zip or tar.gz with one fasta file per sample</strong>
 
