Change header colour scheme

--- a/views/default/confirmation.html
+++ b/views/default/confirmation.html
@@ -125,17 +125,17 @@
         <tr>
             {{
                 if result_data[i]["Best match"]["Match confidence"] == "Perfect":
-                    title_bg="#66bd63"
+                    title_bg="#d9b8d7"
                 elif result_data[i]["Best match"]["Match confidence"] == "Very high":
-                    title_bg="#a6d96a"
+                    title_bg="#e0c5df"
                 elif result_data[i]["Best match"]["Match confidence"] == "High":
-                    title_bg="#d9ef8b"
+                    title_bg="#e8d3e7"
                 elif result_data[i]["Best match"]["Match confidence"] == "Good":
-                    title_bg="#fee08b"
+                    title_bg="#f0e1ef"
                 elif result_data[i]["Best match"]["Match confidence"] == "Low":
-                    title_bg="#fdae61"
+                    title_bg="#f7f0f7"
                 elif result_data[i]["Best match"]["Match confidence"] == "None":
-                    title_bg="#f46d43"
+                    title_bg="#ffffff"
                 else:
                     title_bg="#ffffff"
                 pass}}
