Fix button alignment on landing page

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -65,7 +65,7 @@
                     <div class="box">
                         <span class="fa fa-trophy fa-2x"><br><br></span>
                         <h3>About Bio21</h3>
-                        <p>The Bio21 Molecular Science & Biotechnology Institute is a multidisciplinary research centre at the University of Melbourne.<br><br></p>
+                        <p>The Bio21 Molecular Science & Biotechnology Institute is a multidisciplinary research centre at the University of Melbourne.</p>
                         <a href="http://www.bio21.unimelb.edu.au/" class="button button-small">Visit Bio21</a>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <div class="box">
                         <span class="fa fa-github fa-2x"><br><br></span>
                         <h3>Kaptive on GitHub</h3>
-                        <p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> capsule or other databases.</p>
+                        <p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> capsule or other databases.<br><br></p>
                         <a href="https://github.com/katholt/Kaptive" class="button button-small">Visit GitHub</a>
                     </div>
                 </div>
