--- a/views/default/index.html
+++ b/views/default/index.html
@@ -49,7 +49,7 @@
                     <div class="box">
                         <span class="fa fa-wrench fa-2x"><br><br></span>
                         <h3>Get Started</h3>
-                        <p><strong>Kaptive</strong> is an open source project for the Biomedical community. Licensed under GNU General Public License, version 3.<br><br></p>
+                        <p><strong>Kaptive</strong> is an open source project for the biomedical community, licensed under GNU General Public License version 3.<br><br></p>
                         <a href="{{=URL('jobs')}}" class="button button-small">Submit Job</a>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
             </ul>
         </div>
         <div id="copyright" class="container">
-            <p>&copy; <strong>Kaptive</strong> . All rights reserved. | Design by <a href="http://eresearch.unimelb.edu.au" rel="nofollow">Melbourne eResearch Group</a>, University of Melbourne.</p>
+            <p>&copy; <strong>Kaptive</strong>. All rights reserved. | Design by <a href="http://eresearch.unimelb.edu.au" rel="nofollow">Melbourne eResearch Group</a>, University of Melbourne.</p>
         </div>
     </div>
 </body>
