--- a/views/default/index.html
+++ b/views/default/index.html
@@ -43,14 +43,14 @@
                 <div class="title">
                     <h2>Citation</h2>
                     <p></p>
-                    <p style="font-size:20px">Wyres, KL., Wick, RR., Gorrie, C., Jenney, A., Follador, R., Thomson, NR. and Holt, KE. 2016.<br> <strong>Identification of <i>Klebsiella</i> capsule synthesis loci from whole genome data. <i>Microbial Genomics</i> doi: <a href="http://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000102" rel="nofollow">10.1099/mgen.0.000102 </a></strong></p>
+                    <p style="font-size:20px">Wyres KL, Wick RR, Gorrie C, Jenney A, Follador R, Thomson NR and Holt KE 2016.<br> <strong>Identification of <i>Klebsiella</i> capsule synthesis loci from whole genome data. <i>Microbial Genomics</i> doi: <a href="http://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000102" rel="nofollow">10.1099/mgen.0.000102 </a></strong></p>
                 </div>
                 <div class="column1">
                     <div class="box">
                         <span class="fa fa-wrench fa-2x"><br><br></span>
                         <h3>Get Started</h3>
                         <p><strong>Kaptive</strong> is an open source project for the biomedical community, licensed under GNU General Public License version 3.<br><br></p>
-                        <a href="{{=URL('jobs')}}" class="button button-small">Submit Job</a>
+                        <a href="{{=URL('jobs')}}" class="button button-small">Submit job</a>
                     </div>
                 </div>
                 <div class="column2">
@@ -58,7 +58,7 @@
                         <span class="fa fa-key fa-2x"><br><br></span>
                         <h3>Our team</h3>
                         <p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Lab in the Bio21 Molecular Science & Biotechnology Institute.</p>
-                        <a href="https://holtlab.net/" class="button button-small">Visit Holt Lab</a>
+                        <a href="https://holtlab.net/" class="button button-small">Visit Holt lab</a>
                     </div>
                 </div>
                 <div class="column3">
