update landing page text

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -73,7 +73,7 @@
                     <div class="box">
                         <span class="fa fa-github fa-2x"><br><br></span>
                         <h3>Kaptive on GitHub</h3>
-                        <p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> capsule or other databases.<br><br></p>
+                        <p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> K-locus, O-locus or other databases.<br><br></p>
                         <a href="https://github.com/katholt/Kaptive" class="button button-small">Visit GitHub</a>
                     </div>
                 </div>
