Reconstruct landing page buttons in a table for better alignment

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -45,38 +45,32 @@
                     <p></p>
                     <p style="font-size:20px">Wyres KL, Wick RR, Gorrie C, Jenney A, Follador R, Thomson NR and Holt KE 2016.<br> <strong>Identification of <i>Klebsiella</i> capsule synthesis loci from whole genome data. <i>Microbial Genomics</i> doi: <a href="http://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000102" rel="nofollow">10.1099/mgen.0.000102 </a></strong></p>
                 </div>
-                <div class="column1">
-                    <div class="box">
-                        <span class="fa fa-wrench fa-2x"><br><br></span>
-                        <h3>Get Started</h3>
-                        <p><strong>Kaptive</strong> is an open source project for the biomedical community, licensed under GNU General Public License version 3.<br><br></p>
-                        <a href="{{=URL('jobs')}}" class="button button-small">Submit job</a>
-                    </div>
-                </div>
-                <div class="column2">
-                    <div class="box">
-                        <span class="fa fa-key fa-2x"><br><br></span>
-                        <h3>Our team</h3>
-                        <p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Lab in the Bio21 Molecular Science & Biotechnology Institute.</p>
-                        <a href="https://holtlab.net/" class="button button-small">Visit Holt lab</a>
-                    </div>
-                </div>
-                <div class="column3">
-                    <div class="box">
-                        <span class="fa fa-trophy fa-2x"><br><br></span>
-                        <h3>About Bio21</h3>
-                        <p>The Bio21 Molecular Science & Biotechnology Institute is a multidisciplinary research centre at the University of Melbourne.</p>
-                        <a href="http://www.bio21.unimelb.edu.au/" class="button button-small">Visit Bio21</a>
-                    </div>
-                </div>
-                <div class="column4">
-                    <div class="box">
-                        <span class="fa fa-github fa-2x"><br><br></span>
-                        <h3>Kaptive on GitHub</h3>
-                        <p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> K-locus, O-locus or other databases.<br><br></p>
-                        <a href="https://github.com/katholt/Kaptive" class="button button-small">Visit GitHub</a>
-                    </div>
-                </div>
+                <table class="box">
+                    <tr>
+                        <td style="width: 25%";><span class="fa fa-wrench fa-2x"><br><br></span></td>
+                        <td style="width: 25%";"><span class="fa fa-key fa-2x"><br><br></span></td>
+                        <td style="width: 25%";"><span class="fa fa-trophy fa-2x"><br><br></span></td>
+                        <td style="width: 25%";"><span class="fa fa-github fa-2x"><br><br></span></td>
+                    </tr>
+                    <tr>
+                        <td><h3>Get Started</h3></td>
+                        <td><h3>Our team</h3></td>
+                        <td><h3>About Bio21</h3></td>
+                        <td><h3>Kaptive on GitHub</h3></td>
+                    </tr>
+                    <tr>
+                        <td style="vertical-align: top;"><p><strong>Kaptive</strong> is an open source project for the biomedical community, licensed under GNU General Public License version 3.</p></td>
+                        <td style="vertical-align: top;"><p><strong>Kaptive</strong> is developed and maintained by Kelly Wyres, Ryan Wick and Kathryn Holt at the Holt Lab in the Bio21 Molecular Science &amp; Biotechnology Institute.</p></td>
+                        <td style="vertical-align: top;"><p>The Bio21 Molecular Science &amp; Biotechnology Institute is a multidisciplinary research centre at the University of Melbourne.</p></td>
+                        <td style="vertical-align: top;"><p>The command line version of Kaptive can be deployed on your computer with <i>Klebsiella</i> K-locus, O-locus or other databases.</p></td>
+                    </tr>
+                    <tr>
+                        <td><a href="/kaptive/default/jobs" class="button button-small">Submit job</a></td>
+                        <td><a href="https://holtlab.net/" class="button button-small">Visit Holt lab</a></td>
+                        <td><a href="http://www.bio21.unimelb.edu.au/" class="button button-small">Visit Bio21</a></td>
+                        <td><a href="https://github.com/katholt/Kaptive" class="button button-small">Visit GitHub</a></td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
